--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 html, body {
   margin: 0;
 }
+
+.header{
+  background: #F55A5A;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3.44rem;
+}
+
+.globe {
+  width: 1.5rem;
+}
+
+.header span {
+  color: #ffffff;
+  margin-left: 10px;
+}
